Обновление таймера; Перемещение файла для публикации на Github Pages; Обновление путей к файлам

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/favicon.ico">
-	<link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
-	<link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="favicon.ico" rel="icon" type="image/x-icon">
-	<link href="favicon.ico" rel="icon">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="fonts/font.css" rel="stylesheet" type="text/css">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/animate.css" rel="stylesheet">
+	<link rel="icon" href="dist/favicon.ico">
+	<link href="dist/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+	<link href="dist/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+	<link href="dist/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="dist/favicon.ico" rel="icon" type="image/x-icon">
+	<link href="dist/favicon.ico" rel="icon">
+	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="dist/fonts/font.css" rel="stylesheet" type="text/css">
+	<link href="dist/css/style.css" rel="stylesheet">
+	<link href="dist/css/animate.css" rel="stylesheet">
 	<title>Установка пластиковых (ПВХ) окон</title>
 	<meta name="keywords"
 		content="пластиковые, окна, пвх, вставить, века, дом, профиль, поставить, установить, установка, стандартные, цветные, сайт, современные, купить, фирма, цены, дешевые, стоимость, остекление, монтаж">
 	<meta name="description"
 		content="Окна в дом, квартиру или коттедж из пластикового (пвх) или алюминиевого профиля. Стандартные, цветные и с индивидуальным дизайном! Отличные цены и акции!">
-	<script src="js/main.js" defer></script>
+	<script src="dist/js/main.js" defer></script>
 
 </head>
 
@@ -36,7 +36,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand nav-logo top" href="/">
-					<img src="images/logotype-fixed.jpg" alt="Профремонт">
+					<img src="dist/images/logotype-fixed.jpg" alt="Профремонт">
 				</a>
 			</div>
 			<div id="navbar-collapse-fixed" class="collapse navbar-collapse">
@@ -82,7 +82,7 @@
 			<div class="row">
 				<div class="col-xs-6 col-sm-3 col-md-3 col-lg-2 block">
 					<div class="logotype">
-						<img src="images/logotype.png" alt="Профремонт">
+						<img src="dist/images/logotype.png" alt="Профремонт">
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-5 col-lg-5 hidden-xs">
@@ -118,8 +118,8 @@
 			<div id="navbar-collapse" class="collapse navbar-collapse">
 				<ul id="menu" class="nav navbar-nav">
 					<li class="active"><a href="index.html"><i class="menu-icons menu-window"></i> Окна</a></li>
-					<li><a href="balkony.html"><i class="menu-icons menu-balcony"></i> Балконы</a></li>
-					<li><a href="kuhni.html"><i class="menu-icons menu-cupboard"></i> Шкафы-купе / кухни</a></li>
+					<li><a href="dist/balkony.html"><i class="menu-icons menu-balcony"></i> Балконы</a></li>
+					<li><a href="dist/kuhni.html"><i class="menu-icons menu-cupboard"></i> Шкафы-купе / кухни</a></li>
 					<!-- <li><a href="dveri.html"><i class="menu-icons menu-door"></i> Межкомнатные / входные двери</a></li>
                    <li><a href="potolki.html"><i class="menu-icons menu-ceiling"></i> Натяжные потолки</a></li> -->
 				</ul>
@@ -159,38 +159,38 @@
 					<div class="swiper-slide">
 						<div class="benefits__item">
 							<p class="benefit-image">
-								<img src="images/benefits/4.png" alt="">
+								<img src="dist/images/benefits/4.png" alt="">
 							</p>
 							<p class="benefit-title">Рассрочка без банка </p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="benefits__item">
-							<p class="benefit-image"><img src="images/benefits/2.png" alt=""></p>
+							<p class="benefit-image"><img src="dist/images/benefits/2.png" alt=""></p>
 							<p class="benefit-title">Гарантии от 3 до 10 лет</p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="benefits__item">
-							<p class="benefit-image"><img src="images/benefits/3.png" alt=""></p>
+							<p class="benefit-image"><img src="dist/images/benefits/3.png" alt=""></p>
 							<p class="benefit-title">Индивидуальный подход</p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="benefits__item">
-							<p class="benefit-image"><img src="images/benefits/1.png" alt=""></p>
+							<p class="benefit-image"><img src="dist/images/benefits/1.png" alt=""></p>
 							<p class="benefit-title">Бесплатные консультации</p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="benefits__item">
-							<p class="benefit-image"><img src="images/benefits/5.png" alt=""></p>
+							<p class="benefit-image"><img src="dist/images/benefits/5.png" alt=""></p>
 							<p class="benefit-title">Бесплатный выезд мастера на дом</p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="benefits__item">
-							<p class="benefit-image"><img src="images/benefits/6.png" alt=""></p>
+							<p class="benefit-image"><img src="dist/images/benefits/6.png" alt=""></p>
 							<p class="benefit-title">Окна от лучших производителей</p>
 						</div>
 					</div>
@@ -200,12 +200,12 @@
 				<div class="benefits-arrows">
 					<div class="swiper-button-prev">
 						<div class="benefits__arrow benefits__arrow--left">
-							<img src="images/benefits/left-arrow.svg" alt="">
+							<img src="dist/images/benefits/left-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="swiper-button-next">
 						<div class="benefits__arrow benefits__arrow--right">
-							<img src="images/benefits/right-arrow.svg" alt="">
+							<img src="dist/images/benefits/right-arrow.svg" alt="">
 						</div>
 					</div>
 				</div>
@@ -228,7 +228,7 @@
 						<div class="swiper-slide">
 							<div class="service-block">
 								<div class="service-image">
-									<img src="images/services/5.jpg" alt="">
+									<img src="dist/images/services/5.jpg" alt="">
 								</div>
 								<div class="service-text">
 									<h3>Стандартные ПВХ-окна</h3>
@@ -249,7 +249,7 @@
 						<div class="swiper-slide">
 							<div class="service-block">
 								<div class="service-image">
-									<img src="images/services/6.jpg" alt="">
+									<img src="dist/images/services/6.jpg" alt="">
 								</div>
 								<div class="service-text">
 									<h3>Пвх-окна премиум класса</h3>
@@ -271,7 +271,7 @@
 						<div class="swiper-slide">
 							<div class="service-block">
 								<div class="service-image">
-									<img src="images/services/7.jpg" alt="">
+									<img src="dist/images/services/7.jpg" alt="">
 								</div>
 								<div class="service-text">
 									<h3>Входные группы-перегородки</h3>
@@ -293,14 +293,14 @@
 						<div class="swiper-slide">
 							<div class="service-block">
 								<div class="service-image">
-									<img src="images/services/8.jpg" alt="">
+									<img src="dist/images/services/8.jpg" alt="">
 								</div>
 								<div class="service-text">
 									<h3>Окна с уникальным дизайном</h3>
 									<p>ПВХ-окна любой сложности.</p>
 									<p><strong>Удорожание всего от 20%</strong></p>
 									<p class="services-image_mobile visible-xs-block"><a
-											href="images/services/original/custom/1.jpg"
+											href="dist/images/services/original/custom/1.jpg"
 											data-fancybox-group="fancybox-thumb-4" class="fancybox-thumb"><span>Смотреть
 												работы</span></a>
 									</p>
@@ -316,12 +316,12 @@
 					<div class="services-arrows">
 						<div class="swiper-button-prev">
 							<div class="services__arrow services__arrow--left">
-								<img src="images/benefits/left-arrow.svg" alt="">
+								<img src="dist/images/benefits/left-arrow.svg" alt="">
 							</div>
 						</div>
 						<div class="swiper-button-next">
 							<div class="services__arrow services__arrow--right">
-								<img src="images/benefits/right-arrow.svg" alt="">
+								<img src="dist/images/benefits/right-arrow.svg" alt="">
 							</div>
 						</div>
 					</div>
@@ -396,7 +396,7 @@
 					<div class="review-margin-bottom row comment-item">
 						<div class="col-xs-3 col-sm-2">
 							<div class="review-user">
-								<img src="images/users/face4.png" alt="" class="img-responsive avatar">
+								<img src="dist/images/users/face4.png" alt="" class="img-responsive avatar">
 							</div>
 						</div>
 						<div class="col-xs-9 col-sm-9">
@@ -427,14 +427,14 @@
 						</div>
 						<div class="col-xs-3 col-sm-2">
 							<div class="review-user">
-								<img src="images/users/face5.png" alt="" class="img-responsive avatar">
+								<img src="dist/images/users/face5.png" alt="" class="img-responsive avatar">
 							</div>
 						</div>
 					</div>
 					<div class="row comment-item">
 						<div class="col-xs-3 col-sm-2">
 							<div class="review-user">
-								<img src="images/users/face6.png" alt="" class="img-responsive avatar">
+								<img src="dist/images/users/face6.png" alt="" class="img-responsive avatar">
 							</div>
 						</div>
 						<div class="col-xs-9 col-sm-9">
@@ -463,14 +463,14 @@
 					<div class="row">
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="0.2s" class="wow fadeInDown">
-								<img src="images/about/2.png" alt="">
+								<img src="dist/images/about/2.png" alt="">
 							</div>
 							<p data-wow-delay="0.2s" class="wow fadeInUp"><span>1.</span> Звоните или <a href="#order"
 									class="fancyboxModal">оставляете заявку</a> на сайте</p>
 						</div>
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="0.7s" class="wow fadeInDown">
-								<img src="images/about/3.png" alt="">
+								<img src="dist/images/about/3.png" alt="">
 							</div>
 							<p data-wow-delay="0.7s" class="wow fadeInUp"><span>2.</span> К Вам выезжает инженер на
 								замер</p>
@@ -481,13 +481,13 @@
 					<div class="row">
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="1.2s" class="wow fadeInDown">
-								<img src="images/about/4.png" alt="">
+								<img src="dist/images/about/4.png" alt="">
 							</div>
 							<p data-wow-delay="1.2s" class="wow fadeInUp"><span>3.</span> Заключение договора</p>
 						</div>
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="1.7s" class="wow fadeInDown">
-								<img src="images/about/5.png" alt="">
+								<img src="dist/images/about/5.png" alt="">
 							</div>
 							<p data-wow-delay="1.7s" class="wow fadeInUp"><span>4.</span> Доставка всех необходимых
 								материалов</p>
@@ -498,13 +498,13 @@
 					<div class="row">
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="2.2s" class="wow fadeInDown">
-								<img src="images/about/6.png" alt="">
+								<img src="dist/images/about/6.png" alt="">
 							</div>
 							<p data-wow-delay="2.2s" class="wow fadeInUp"><span>5.</span> Монтаж окон и откосов</p>
 						</div>
 						<div class="about-inner col-sm-6">
 							<div data-wow-delay="2.7s" class="wow fadeInDown">
-								<img src="images/about/1.png" alt="">
+								<img src="dist/images/about/1.png" alt="">
 							</div>
 							<p data-wow-delay="2.7s" class="wow fadeInUp"><span>6.</span> Вы принимаете результат работ!
 							</p>
@@ -524,21 +524,21 @@
 				<div class="col-sm-4">
 					<a href="images/documents/original/document4.jpg" class="sertificate-document"
 						data-fancybox-group="gallery-documents">
-						<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+						<img src="dist/images/documents/document4.jpg" class="img-responsive" alt="">
 						<div class="document-overlay"></div>
 					</a>
 				</div>
 				<div class="col-sm-4">
 					<a href="images/documents/original/document4.jpg" class="sertificate-document"
 						data-fancybox-group="gallery-documents">
-						<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+						<img src="dist/images/documents/document4.jpg" class="img-responsive" alt="">
 						<div class="document-overlay"></div>
 					</a>
 				</div>
 				<div class="col-sm-4">
 					<a href="images/documents/original/document4.jpg" class="sertificate-document"
 						data-fancybox-group="gallery-documents">
-						<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+						<img src="dist/images/documents/document4.jpg" class="img-responsive" alt="">
 						<div class="document-overlay"></div>
 					</a>
 				</div>
@@ -655,7 +655,7 @@
 							// Необходимо указать данный тип макета.
 							iconLayout: 'default#image',
 							// Своё изображение иконки метки.
-							iconImageHref: 'images/marker.png',
+							iconImageHref: 'dist/images/marker.png',
 							// Размеры метки.
 							iconImageSize: [30, 42],
 							// Смещение левого верхнего угла иконки относительно
@@ -676,7 +676,7 @@
 			<div class="row">
 				<div class="col-sm-8 col-md-9 col-lg-10">
 					<div class="footer-copyright">
-						<img src="images/logotype-min.png" alt="" class="footer-logotype">
+						<img src="dist/images/logotype-min.png" alt="" class="footer-logotype">
 						<div class="footer-copyright-text">
 							<div class="clearfix visible-xs-block"></div>
 							<span>2017 &copy; ООО «Профремонт»</span> <br class="visible-xs-block" />Установка
@@ -866,7 +866,7 @@
 	</div>
 
 	<div class="smooth-scroll">
-		<img class="smooth-scroll__img" src="./images/prev_arrow.png" alt="smooth">
+		<img class="smooth-scroll__img" src="dist/images/prev_arrow.png" alt="smooth">
 	</div>
 
 	<div class="image-modal">
